--- a/views/webapps.erb
+++ b/views/webapps.erb
@@ -1,7 +1,7 @@
 <table>
-  <%#@webapps.each do |webapp|%>
+  <%@webapps.each do |webapp|%>
   <tr>
-    <td><%#=webapp.id%></td><td><%#=webapp.domain%></td><td><%#=webapp.webapp_key%></td>
+    <td><%=webapp.id%></td><td><%=webapp.domain%></td><td><%=webapp.webapp_key%></td>
   </tr>
   <%end%>
 </table>
