--- a/views/webapps.erb
+++ b/views/webapps.erb
@@ -1,7 +1,18 @@
-<table>
+<link rel="stylesheet" href="/css/datatables.css"  type="text/css" />
+<table id="main-table">
+  <tr><th>Webapp ID</th><th>Domain</th><th>Webapp Key</th></tr>
   <%@webapps.each do |webapp|%>
   <tr>
     <td><%=webapp.id%></td><td><%=webapp.domain%></td><td><%=webapp.webapp_key%></td>
   </tr>
   <%end%>
 </table>
+
+
+<script type="text/javascript" src="/javascripts/datatables.js" />
+
+<script type="text/javascript">
+  $(document).ready(function(){
+	$('#main-table').dataTable({"sPaginationType": "bs_full"});
+});
+</script>
