--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,1 +1,9 @@
-<h1>Welcome to Blocmetrics</h1>
+<div class="hero-unit">
+	<h1>Welcome to Blocmetrics</h1>
+	<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+ 
+	<% if !current_user %>
+		<a href="/login" class="btn btn-large btn-success">Sign In</a>
+		<a href="/sign_up" class="btn btn-large btn-success">Sign Up</a>
+	<% end %>
+</div>
