Added events view

--- a/views/new_webapp.erb
+++ b/views/new_webapp.erb
@@ -1,4 +1,5 @@
 <form action="/webapps/create" method="post">
+  <p>Webapp name (e.g., My First Webapp): <input type="text" name="name" /></p>
   <p>Webapp domain (e.g., bloccit.com): <input type="text" name="domain" /></p>
   <input type="submit" value="Register Webapp" />
 </form> 
