--- a/views/webapps.erb
+++ b/views/webapps.erb
@@ -1,9 +1,9 @@
 <link rel="stylesheet" href="/css/datatables.css"  type="text/css" />
 <table id="main-table">
-  <tr><th>Webapp ID</th><th>Domain</th><th>Webapp Key</th></tr>
+  <tr><th>Webapp ID</th><th>Webapp Name</th><th>Domain</th><th>Webapp Key</th></tr>
   <%@webapps.each do |webapp|%>
   <tr>
-    <td><%=webapp.id%></td><td><%=webapp.domain%></td><td><%=webapp.webapp_key%></td>
+    <td><%=webapp.id%></td><td><a href="/webapps/<%= webapp.id %>/events"><%=webapp.name%></a></td><td><%=webapp.domain%></td><td><%=webapp.webapp_key%></td>
   </tr>
   <%end%>
 </table>
