--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,12 +3,12 @@
   <head>
 	<meta charset="utf-8"> 
     <script type="text/javascript" src="/javascripts/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="/javascripts/blocmetrics.js"></script>
+    
 	<link rel="stylesheet" href="/css/bootstrap.css"  type="text/css" />
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <title>Blocmetrics</title>
 	
-	<div class="container">
+	<div class="container blocmetrics">
 		<a href="/"><h1>Blocmetrics</h1></a>
 				
 		<div class="navbar">
@@ -51,5 +51,6 @@
 		<%= yield %>
 	</div>
 	
+	<script type="text/javascript" src="/javascripts/blocmetrics.js" ></script>
   </body>
 </html>
