--- a/views/events.erb
+++ b/views/events.erb
@@ -2,6 +2,7 @@
 
 <table>
     <% @events.each do |event|%>
-        <tr><td><%= event.id %></td><td><%= event.parameter_1 %></td><td><%= event.parameter_2 %></td><td><%= event.time_stamp %></td></tr>
+		<tr><th>Event ID</th><th>Tag ID</th><th>Tag Type</th><th>Event URL</th><th>Timestamp</th></tr>
+        <tr><td><%= event.id %></td><td><%= event.tag_id %></td><td><%= event.tag_type %></td><td><%= event.url %></td><td><%= event.time_stamp %></td></tr>
     <% end %>
 </table>
