--- a/views/events.erb
+++ b/views/events.erb
@@ -3,6 +3,7 @@
 <table>
     <tr><th>Event ID</th><th>Tag ID</th><th>Tag Type</th><th>Tag HTML</th><th>Event URL</th><th>Timestamp</th></tr>
     <% @events.each do |event|%>
-        <tr><td><%= event.id %></td><td><%= event.tag_id %></td><td><%= event.tag_type %></td><td><%= event.html %></td><td><%= event.url %></td><td><%= event.time_stamp %></td></tr>
+        <tr><td><%= event.id %></td><td><%= event.tag_id %></td><td><%= event.tag_type %></td><td><%= event.tag_html %></td>
+          <td><%= event.url %></td><td><%= event.time_stamp %></td></tr>
     <% end %>
 </table>
