--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,20 +2,22 @@
 <html>
   <head>
 	<meta charset="utf-8"> 
-    <script type="text/javascript" src="/javascripts/jquery-1.11.0.min.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     
-	<link rel="stylesheet" href="/css/bootstrap.css"  type="text/css" />
+  <link rel="stylesheet" href="/css/bootstrap.css"  type="text/css" />
+
 	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+	<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
     <title>Blocmetrics</title>
 	
 	<div class="container blocmetrics">
 		<a href="/"><h1>Blocmetrics</h1></a>
 				
 		<div class="navbar">
+			
 			<div class="navbar-inner">
-				
 				<% if current_user %>	
-					<ul class="nav">
+					<ul class="nav navbar-nav">
 						<li><a href="/webapps">Your Webapps</a></li>
 						<li><a href="/webapps/new">Register a New Webapp</a></li>	
 					</ul>
@@ -29,9 +31,9 @@
 						<li><a href="/sign_up">Sign Up</a></li>
 					</ul>
 				<%end%>
-				
-			</div>
+			</div>	
 		</div>
+		
 	</div>
 	
 
